# QuickDb

./: CMakeLists.txt  CMakePresets.json  Interface.md  README.md  UserGuide.md  vcpkg.json
include/quickdb/: quickdb.h
include/quickdb/components/: aggregation.h  collection.h  document.h  exception.h  field.h  gridfs.h  logging.h  options.h  query.h  reflection.h  update.h
quickdb/: CMakeLists.txt  quickdb.cpp  quickdb.h
quickdb/components/: collection.h  document.h  exception.h  field.h
src/: quickdb.cpp
test/: CMakeLists.txt  User.h  aggregation_builder_tests.cpp  aggregation_builder_tests.h  collection_tests.cpp  collection_tests.h  database_tests.cpp  database_tests.h  gridfs_tests.cpp  gridfs_tests.h  main.cpp  query_builder_tests.cpp  query_builder_tests.h  serialization_tests.cpp  serialization_tests.h  test_runner.h  update_builder_tests.cpp  update_builder_tests.h  user_document.h
